Fixed bug with prompt not showing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -126,7 +126,6 @@ a {
   border-radius: 3px;
 }
 
-/*.rightCover{
-  background-color: #BDC3C7;
-  z-index: 8;
-}*/
+.count-down {
+  color: red;
+}
